[package]
name = "morkovmap"
version = "0.4.0"
edition = "2021"
description = "A data-driven, Markov Chain-based tilemap generator library and app."
authors = ["Jan Małek"]
keywords = ["gamedev", "random", "library", "map", "procedural"]
categories = ["game-development"]
repository = "https://github.com/scrdest/MorkovChain-maptiler"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
arrayvec = "^0.7.2"
itertools = "^0.10.5"
ril = { version = "^0.9.0", features = ["all"] }
serde = { version = "1.0.159", features = ["derive", "alloc", "rc"] }
serde_json = "^1.0.95"
num = "^0.4.0"
smallvec = { version = "1.10.0", features = ["serde", "union"] }
rayon = "1.7.0"
